2005-08-10  Matthias Koeppe  <mkoeppe@mail.math.uni-magdeburg.de>

	* slime.el (slime-presentation-around-point): Change interface,
	return presentation as primary return value.
	(slime-copy-presentation-at-point): Use
	slime-presentation-around-point.  Copying now also works when the
	first character is clicked and when the REPL buffer is not current.
	(slime-presentation-menu): Use slime-presentation-around-point.

2005-08-10  Martin Simmons <martin@lispworks.com>

	* swank-lispworks.lisp (defadvice compile-file): Return all values
	from the real compile-file.

2005-08-10  Edi Weitz  <edi@agharta.de>

	* swank.lisp (transpose-lists): Replaced with much nicer function
	by Helmut Eller.

2005-08-09  Matthias Koeppe  <mkoeppe@mail.math.uni-magdeburg.de>

	* slime.el (slime-read-object): Handle ids that are conses.
	Patch by "Thas" on #lisp.

2005-08-09  Edi Weitz  <edi@agharta.de>

	* swank.lisp (transpose-lists): Reimplemented without APPLY so we
	don't have problems with CALL-ARGUMENTS-LIMIT.

2005-08-08  Matthias Koeppe  <mkoeppe@mail.math.uni-magdeburg.de>

	* slime.el (undo-in-progress): Define for XEmacs compatibility.
	Reported by Friedrich Dominicus.

2005-08-07  Matthias Koeppe  <mkoeppe@mail.math.uni-magdeburg.de>

	Fix for the presentations menu.  Reported by Aleksandar Bakic.
	
	* present.lisp (lookup-presented-object): Handle ids that are
	conses. 
	(execute-menu-choice-for-presentation-id): Use equal for comparing
	ids, to handle the cons case.
	(menu-choices-for-presentation): Quote the presentation id, as it
	can be a cons.
	* slime.el (slime-presentation-menu, slime-presentation-menu) 
	(slime-inspect-presented-object): Quote the presentation id.

2005-08-06  Matthias Koeppe  <mkoeppe@mail.math.uni-magdeburg.de>

	* swank.lisp (form-completion): New generic function, factored out
	from complete-form.
	(complete-form): Factor out form-completion.
	(form-completion): Specialize on defmethod forms to insert arglist
	of generic function.
